Add computation visitors
* Fix immutable fields
* Fix .gitignore
* Re-add Guava dependency